# skoll

./: CMakeLists.txt  README.md  antidiagonal.h  classification.h  derivations.h  filtered.h  graded.h  linearextensions.h  linearinequalities.h  linearsolve.h  sigmadiagonal.h  skoll.cpp  sumintersect.h  torusinder.h
classifications/: nicenilpotent6.list  nicenilpotent7.list  nicenilpotent8.list  nicenilpotent9.list  nilpotent3.list  nilpotent4.list  nilpotent5.list  nilpotent6.list  nilpotent6_magnin.list  nilpotent7.list  nilpotent7_gong.list
