cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
add_compile_options(-O2 -g -Wctor-dtor-privacy -Wreorder -Wold-style-cast -Wsign-promo -Wchar-subscripts -Winit-self -Wmissing-braces -Wreturn-type -Wswitch -Wtrigraphs -Wextra -Wno-sign-compare -Wno-narrowing -Wno-attributes)
project(skoll VERSION 0.1)
set(SRC skoll.cpp)
add_executable(skoll ${SRC})
target_link_libraries(skoll PUBLIC wedge ginac cocoa gmp cln boost_program_options)
target_link_directories(skoll PUBLIC $ENV{WEDGE_PATH}/lib)
target_include_directories(skoll PUBLIC $ENV{WEDGE_PATH}/include)

